A spellchecker... my kingdom for a sp3llchekkah

--- a/tests/01.htm
+++ b/tests/01.htm
@@ -71,7 +71,7 @@
           ok(isCleared, "Store no longer contains '" + key + "' prop");
         }
 
-        deepEqual(myObj, testObj, "Retreived object matches source obj");
+        deepEqual(myObj, testObj, "Retrieved object matches source obj");
         ok(isEmpty, "Store is empty");
       });
 
